--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "author": "Syncfusion Inc",
   "license": "SEE LICENSE IN README.md",
   "dependencies": {
-    "jquery": "*",
+    "jquery": "1.12.2",
     "jquery-validation": "1.20.0",
     "jsrender": "*",
     "@boldreports/global": "10.1.11"
